--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .js,.ts --fix ."
+    "lint": "eslint --ext .js,.ts --fix .",
+    "sass": "sass ./assets/scss/style.scss ./assets/css/style.css"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "sass": "^1.50.0"
   }
 }
